Usa jQuery nativo do Magento
Removida chamada de novo jQuery e trocados todos os "tulipas" por
"jQuery" evitando problemas de compatibilidade.
**** Detalhe importante: problemas ao finalizar compra no Magento
1.9.1.1 *****
Use o Novo Tulipa Checkout nesse caso!

--- a/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/onepage/billing.phtml
+++ b/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/onepage/billing.phtml
@@ -47,7 +47,7 @@ $has_addr	= $this->customerHasAddresses();
                         <?php if ($logged)  : //se logado importa valor do tipo de pessoa?>
 						<script type="text/javascript">
 						//<![CDATA[
-                           tulipa('#tipopessoa').children("option:contains('<?php echo $this->htmlEscape($this->getCustomer()->getTipopessoa()) ?>')").attr('selected', 'selected');
+                           jQuery('#tipopessoa').children("option:contains('<?php echo $this->htmlEscape($this->getCustomer()->getTipopessoa()) ?>')").attr('selected', 'selected');
 						//]]>
 						</script>
                          <?php endif; ?>                     
@@ -503,7 +503,7 @@ $has_addr	= $this->customerHasAddresses();
 
 
 <script type="text/javascript">
-      var temcep = tulipa('input[name*="[postcode]"]').val();
+      var temcep = jQuery('input[name*="[postcode]"]').val();
       if(temcep != ""){
           buscarEndereco('<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_SKIN); ?>','billing');
       }
