--- a/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/onepage/review.phtml
+++ b/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/onepage/review.phtml
@@ -21,17 +21,17 @@ p.msgcampo{ font-size:10px; color:#f00; clear:both; width:300px;}
 </style>
 <script>
 function limpacc(){
-	/*if((tulipa('#superpay_cc_cid2').val() != "") && (tulipa('#superpay_cc_number2').val() != "") && (tulipa('#superpay_cc_owner2').val() != "") && (tulipa('#superpay_expiration2').val() != "")&& (tulipa('#superpay_expiration_yr2').val() != "")){
-	tulipa('#superpay_cc_owner').val(tulipa('#superpay_cc_owner2').val());
-	tulipa('#superpay_cc_number').val(tulipa('#superpay_cc_number2').val());
-	tulipa('#superpay_cc_cid').val(tulipa('#superpay_cc_cid2').val());
-	tulipa('#superpay_expiration').val(tulipa('#superpay_expiration2').val());
-	tulipa('#superpay_expiration_yr').val(tulipa('#superpay_expiration_yr2').val());
-	tulipa('#superpay_cc_number2').val('').removeClass('required-entry');
-	tulipa('#superpay_cc_cid2').val('').removeClass('required-entry');
-	tulipa('#superpay_expiration2').val('').removeClass('required-entry');
-	tulipa('#superpay_expiration_yr2').val('').removeClass('required-entry');
-	tulipa('#superpay_cc_owner2').val('').removeClass('required-entry');
+	/*if((jQuery('#superpay_cc_cid2').val() != "") && (jQuery('#superpay_cc_number2').val() != "") && (jQuery('#superpay_cc_owner2').val() != "") && (jQuery('#superpay_expiration2').val() != "")&& (jQuery('#superpay_expiration_yr2').val() != "")){
+	jQuery('#superpay_cc_owner').val(jQuery('#superpay_cc_owner2').val());
+	jQuery('#superpay_cc_number').val(jQuery('#superpay_cc_number2').val());
+	jQuery('#superpay_cc_cid').val(jQuery('#superpay_cc_cid2').val());
+	jQuery('#superpay_expiration').val(jQuery('#superpay_expiration2').val());
+	jQuery('#superpay_expiration_yr').val(jQuery('#superpay_expiration_yr2').val());
+	jQuery('#superpay_cc_number2').val('').removeClass('required-entry');
+	jQuery('#superpay_cc_cid2').val('').removeClass('required-entry');
+	jQuery('#superpay_expiration2').val('').removeClass('required-entry');
+	jQuery('#superpay_expiration_yr2').val('').removeClass('required-entry');
+	jQuery('#superpay_cc_owner2').val('').removeClass('required-entry');
 	}*/
 };
 </script>
