--- a/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/persistent/customer/address/edit.phtml
+++ b/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/persistent/customer/address/edit.phtml
@@ -2,14 +2,13 @@
 //$jquery = Mage::getStoreConfig('onepagecheckout/general/jquery');
 //if ($jquery !== '0') :
 ?>
-<script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/jquery.js"></script>
 <script type="text/javascript" src="<?=Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_SKIN)?>frontend/base/default/deivison/jquery.maskedinput.min.js"></script>
 <script type="text/javascript" src="<?=Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_SKIN)?>frontend/base/default/deivison/jquery.autotab-1.1b.js"></script>
 <script type="text/javascript" src="<?=Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_SKIN)?>frontend/base/default/deivison/deivison.js"></script>
 <script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/jquery.blockUI.js"></script>
 <?php //endif; ?>
 <script>
-tulipa.blockUI({
+jQuery.blockUI({
             message: 'Carregando, aguarde...',
 			css: {border: 'none', backgroundColor: 'none', color: '#fff' }
         	});
@@ -72,7 +71,7 @@ tulipa.blockUI({
                         </select>
                         <script type="text/javascript">
 						//<![CDATA[
-                            tulipa('#tipopessoa').children("option:contains('<?php echo $this->htmlEscape($this->getCustomer()->getTipopessoa()) ?>')").attr('selected', 'selected');
+                            jQuery('#tipopessoa').children("option:contains('<?php echo $this->htmlEscape($this->getCustomer()->getTipopessoa()) ?>')").attr('selected', 'selected');
 						//]]>
 						</script>                        
                     </div>
