--- a/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/persistent/customer/form/register.phtml
+++ b/Tulipa Checkout/app/design/frontend/base/default/template/onepagecheckout/persistent/customer/form/register.phtml
@@ -17,7 +17,7 @@
 <script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/pGenerator.jquery.js"></script>
 <?php //endif; ?>
 <script>
-tulipa.blockUI({
+jQuery.blockUI({
             message: 'Carregando, aguarde...',
 			css: {border: 'none', backgroundColor: 'none', color: '#fff' }
         	});
@@ -311,7 +311,7 @@ if( sizeof($arrParams)>0){ ?>
 <script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/tipo.js"></script>
 <script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/inputs.js"></script>
 <script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/forcapass.js"></script>
-<script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/cnpj.js"></script>
+<!--<script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/cnpj.js"></script>-->
 <script src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS); ?>Tulipa-Checkout/gerasenha.js"></script>
 <!-- consulta cnpj -->
 <div id="consultaexterna"></div>
